--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,29 @@
+@font-face {
+  font-family: "Vesterbro Bold";
+  src: url("/fonts/Vesterbro-Bold.otf");
+}
+
+@font-face {
+  font-family: "Vesterbro Extrabold";
+  src: url("/fonts/Vesterbro-Extrabold.otf");
+}
+@font-face {
+  font-family: "Vesterbro Light";
+  src: url("/fonts/Vesterbro-Light.otf");
+}
+@font-face {
+  font-family: "Vesterbro Medium";
+  src: url("/fonts/Vesterbro-Medium.otf");
+}
+@font-face {
+  font-family: "Vesterbro Poster";
+  src: url("/fonts/Vesterbro-Poster.otf");
+}
+@font-face {
+  font-family: "Vesterbro Regular";
+  src: url("/fonts/Vesterbro-Regular.otf");
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,26 +34,11 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@keyframes spin {
+  to {
+      transform: rotate(360deg);
   }
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.animate-spin {
+  animation: spin 5s linear infinite;
 }
